--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Welcome to Laboratory 1</h1>
+    <h1>22B1NUM6252 G.Davaatseren</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
         do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -15,6 +15,7 @@
         fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est
         laborum. </p>
+    <a href="./lab1.html">lab1</a>
 </body>
 
 </html>
