--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html>
 
 <head>
-    <title>Welcome to Internet Technology Fundamentals</title>
+    <title>Интернэт технологийн үндэс</title>
 </head>
 
 <body>
-    <h1>22B1NUM6252 G.Davaatseren</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum. </p>
-    <a href="./lab1.html">lab1</a>
+    <h1>Монгол улсын их сургууль</h1>
+    <h2>МТЭС ЭХИТ Электроникын инженерчлэл</h2>
+    <h2>Г.Даваацэрэн 22B1NUM6252</h2>
+    <p></p>
+    <a href="lab2.html">lab2</a>
+    
 </body>
 
 </html>
