--- a/Minii tuhai.html
+++ b/Minii tuhai.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Welcome to Internet Technology Fundamentals</title>
+    <title>Миний тухай</title>
 </head>
 
 <body>
-    <h1>Welcome to Laboratory 1</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum. </p>
+    <h1>миний тухай</h1>
+    <p></p>
+    <a href="Minii tuhai.html">about me</a>
+    <a href="lab2.html">HOME</a>
+    <a href="Minii ger buliin tuhai.html">y family</a>
+    <a href="minii naizuud.html">My friends</a>
+    <a herf="Holboo barihiig husvel.html">contact</a>
 </body>
 
 </html>
