--- a/Minii tuhai.html
+++ b/Minii tuhai.html
@@ -12,7 +12,7 @@
     <a href="lab2.html">HOME</a>
     <a href="Minii ger buliin tuhai.html">y family</a>
     <a href="minii naizuud.html">My friends</a>
-    <a herf="Holboo barihiig husvel.html">contact</a>
+    <a href="holboo.html">contact</a>
 </body>
 
 </html>
