--- a/holboo.html
+++ b/holboo.html
@@ -2,24 +2,21 @@
 <html>
 
 <head>
-    <title>holboo barihiig husvel</title>
+    <title>холбоо</title>
 </head>
 
 <body>
-    <h1>holboo barihiig husvel</h1>
+    <h1>Холбоо барихийг хүсвэл</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
         do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eugi
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum. </p>
+        dolor </p>
     <a href="Minii tuhai.html">about me</a>
     <a href="lab2.html">HOME</a>
     <a href="Minii ger buliin tuhai.html">y family</a>
     <a href="minii naizuud.html">My friends</a>
-    <a herf="Holboo barihiig husvel.html">contact</a>
+    <a href="holboo.html">contact</a>
 </body>
 
 </html>
