--- a/lab2.html
+++ b/lab2.html
@@ -6,11 +6,15 @@
 </head>
 <body>
     <h1>My Family</h1>
+    <table>
+        <td>
         <a href="Minii tuhai.html">about me</a>
         <a href="lab2.html">HOME</a>
         <a href="Minii ger buliin tuhai.html">y family</a>
         <a href="minii naizuud.html">My friends</a>
         <a href="holboo.html">contact</a>
         <p>This page contains information about my family.</p>
+        </td>
+    </table>   
 </body>
 </html>
