--- a/Minii ger buliin tuhai.html
+++ b/Minii ger buliin tuhai.html
@@ -6,11 +6,14 @@
 </head>
 <body>
     <h1>My Family</h1>
-        <a href="Minii tuhai.html">about me</a>
-        <a href="lab2.html">HOME</a>
-        <a href="Minii ger buliin tuhai.html">y family</a>
-        <a href="minii naizuud.html">My friends</a>
-        <a href="holboo.html">contact</a>
-        <p>This page contains information about my family.</p>
+    <table>
+        <ul>
+            <li><a href="Minii tuhai.html">About me</a></li>
+            <li><a href="lab2.html">HOME</a></li>
+            <li><a href="Minii ger buliin tuhai.html">My family</a></li>
+            <li><a href="minii naizuud.html">My friends</a></li>
+            <li><a href="holboo.html">Contact</a></li>
+        </ul>
+    </table>
 </body>
 </html>
