--- a/holboo.html
+++ b/holboo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>холбоо</title>
+    <title>Холбоо Барих</title>
 </head>
 
 <body>
@@ -11,12 +11,16 @@
         do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor </p>  
-    <a href="Minii tuhai.html">about me</a>
-    <a href="lab2.html">HOME</a>
-    <a href="Minii ger buliin tuhai.html">y family</a>
-    <a href="minii naizuud.html">My friends</a>
-    <a href="holboo.html">contact</a>
+        dolor </p>
+    <table>
+        <ul>
+            <li><a href="Minii tuhai.html">About me</a></li>
+            <li><a href="lab2.html">HOME</a></li>
+            <li><a href="Minii ger buliin tuhai.html">My family</a></li>
+            <li><a href="minii naizuud.html">My friends</a></li>
+            <li><a href="holboo.html">Contact</a></li>
+        </ul>
+    </table>
 </body>
 
 </html>
