--- a/minii naizuud.html
+++ b/minii naizuud.html
@@ -15,11 +15,15 @@
         fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est
         laborum. </p>
-    <a href="Minii tuhai.html">about me</a>
-    <a href="lab2.html">HOME</a>
-    <a href="Minii ger buliin tuhai.html">y family</a>
-    <a href="minii naizuud.html">My friends</a>
-    <a href="holboo.html">contact</a>
+    <table>
+        <ul>
+            <li><a href="Minii tuhai.html">About me</a></li>
+            <li><a href="lab2.html">HOME</a></li>
+            <li><a href="Minii ger buliin tuhai.html">My family</a></li>
+            <li><a href="minii naizuud.html">My friends</a></li>
+            <li><a href="holboo.html">Contact</a></li>
+        </ul>
+    </table>
 </body>
 
 </html>
