--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>МТЭС ЭХИТ Электроникын инженерчлэл</h2>
     <h2>Г.Даваацэрэн 22B1NUM6252</h2>
     <p></p>
+    <a href="lab1.html">lab1</a>
     <a href="lab2.html">lab2</a>
     
 </body>
