--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p></p>
     <a href="lab1.html">lab1</a>
     <a href="lab2.html">lab2</a>
+    <a href="lab3.html">lab3</a>
     
 </body>
 
