--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="lab1.html">lab1</a>
     <a href="lab2.html">lab2</a>
     <a href="lab3.html">lab3</a>
+    <a href="lab5.html">lab5</a>
     
 </body>
 
